--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         ></input>
         <button id="newround_button" class="
         w-full
-        bg-sky-700
-        hover:bg-sky-800
+        bg-blue-700
+        hover:bg-blue-800
         focus:outline-2 focus:outline-offset-1
-        focus:outline-sky-700
-        active:bg-sky-900
+        focus:outline-blue-700
+        active:bg-blue-900
 
         rounded-xl
         text-lg
@@ -49,11 +49,11 @@
 
         <button id="view-results" class="
         w-full
-        bg-sky-500
-        hover:bg-sky-600
+        bg-blue-500
+        hover:bg-blue-600
         focus:outline-2 focus:outline-offset-1
-        focus:outline-sky-500
-        active:bg-sky-700
+        focus:outline-blue-500
+        active:bg-blue-700
 
         rounded-xl
         text-3xl
@@ -82,11 +82,11 @@
     <div id="buttons" class="flex flex-col max-w-md mx-auto mt-30">
       <button id="coupable" class="
         flex-1
-        bg-amber-500
-        hover:bg-amber-600
+        bg-red-500
+        hover:bg-red-600
         focus:outline-2 focus:outline-offset-1
-        focus:outline-amber-500
-        active:bg-amber-700
+        focus:outline-red-500
+        active:bg-red-700
 
         text-3xl
         p-2
@@ -97,11 +97,11 @@
       <button id="non-coupable" class="
         flex-1
         
-        bg-fuchsia-500
-        hover:bg-fuchsia-600
+        bg-blue-500
+        hover:bg-blue-600
         focus:outline-2 focus:outline-offset-1
-        focus:outline-fuchsia-500
-        active:bg-fuchsia-700
+        focus:outline-blue-500
+        active:bg-blue-700
 
         p-2
         text-3xl">
@@ -112,11 +112,11 @@
         w-40 mx-auto
         rounded-3xl
         
-        bg-sky-500
-        hover:bg-sky-500
+        bg-blue-500
+        hover:bg-blue-500
         focus:outline-2 focus:outline-offset-1
-        focus:outline-sky-500
-        active:bg-sky-600
+        focus:outline-blue-500
+        active:bg-blue-600
 
         p-2
         text-3xl
